# src/models/score_put_request.rs
@@ -13,16 +13,19 @@
 
 #[derive(Clone, Debug, PartialEq, Default, Serialize, Deserialize)]
 pub struct ScorePutRequest {
-    #[serde(rename = "graph")]
-    pub graph: String,
+    #[serde(rename = "turtle_assessment")]
+    pub turtle_assessment: String,
+    #[serde(rename = "jsonld_assessment")]
+    pub jsonld_assessment: String,
     #[serde(rename = "scores")]
     pub scores: Box<crate::models::DatasetScore>,
 }
 
 impl ScorePutRequest {
-    pub fn new(graph: String, scores: crate::models::DatasetScore) -> ScorePutRequest {
+    pub fn new(turtle_assessment: String, jsonld_assessment: String, scores: crate::models::DatasetScore) -> ScorePutRequest {
         ScorePutRequest {
-            graph,
+            turtle_assessment,
+            jsonld_assessment,
             scores: Box::new(scores),
         }
     }
